tweaks to benchmark vm settings for more consistent results